# c-http-server

./: .gitignore  CMakeLists.txt  Makefile
include/: http.h  main.h  tcp.h
src/: http.c  main.c  tcp.c
